==> crosser/examples-embedded/Arduino-Uno/Platform-Arduino-Uno/Hal/Hal.c <==
#include "Hal.h"
#include "Em_Message.h"
#include "avr/interrupt.h"
#include "avr/io.h"
#define LED_BIT                     (1 << 5)
#define LED_CONFIG()                (DDRB |= LED_BIT)
#define LED_ON()                    (PORTB |= LED_BIT)
#define LED_OFF()                   (PORTB &= ~LED_BIT)
#define LED_READ()                  (PORTB & LED_BIT)
#define LED_TOGGLE()                (PORTB ^= LED_BIT)
#define CONNECTED_BIT               (1 << 2)
#define CONNECTED_CONFIG()          (DDRB |= CONNECTED_BIT)
#define CONNECTED_ON()              (PORTB |= CONNECTED_BIT)
#define CONNECTED_OFF()             (PORTB &= ~CONNECTED_BIT)
#define EAP_RX_ACK_BIT              (1 << 4)
#define EAP_RX_ACK_CONFIG()         (DDRD |= EAP_RX_ACK_BIT)
#define EAP_RX_ACK_SET()            (PORTD |= EAP_RX_ACK_BIT)
#define EAP_RX_ACK_CLR()            (PORTD &= ~EAP_RX_ACK_BIT)
#define EAP_TX_ACK_BIT              (1 << 2)
#define EAP_TX_ACK_CONFIG()         (DDRD &= ~EAP_TX_ACK_BIT, PORTD |= EAP_TX_ACK_BIT, EICRA |= 0x3)
#define EAP_RX_BUF                  (UDR0)
#define EAP_TX_BUF                  (UDR0)
#define EAP_RX_INT_CLR()            (UCSR0A |= 1 << RXC0)
#define EAP_RX_INT_ENABLE()         (UCSR0B |= 1 << RXCIE0)
#define EAP_TX_INT_CLR()            (EIFR |= 0x1)
#define EAP_TX_INT_ENABLE()         (EIMSK |= 0x1)
#define TIMER_CONFIG()              TCCR1A = 0x00, TCCR1B = 0x00
#define TIMER_DIV1024               0x05
#define TIMER_MODE_CTC              0x08

void Hal_init() {

    DEBUG1_CONFIG(); DEBUG1_OFF();
    DEBUG2_CONFIG(); DEBUG2_OFF();

    DEBUG1_ON(); DEBUG1_OFF();

    LED_CONFIG();
    LED_OFF();

    CONNECTED_CONFIG();
    CONNECTED_OFF();

    EAP_TX_ACK_CONFIG();
    EAP_RX_ACK_CONFIG();
    EAP_RX_ACK_SET();

    TIMER_CONFIG();

    UBRR0H = (8 >> 8);
    UBRR0L = 8;
    UCSR0B |= (1 << RXEN0) | (1 << TXEN0);    // enable receiver and transmitter
    UCSR0C = ((1 << UCSZ00) | (1 << UCSZ01)); // Set 8 data bits, 1 stop bit, no parity

    handlerTab[DISPATCH_HANDLER_ID] = Em_Message_dispatch;
}

void Hal_tickStart(uint16_t msecs, void (*handler)(void)) {
    handlerTab[TICK_HANDLER_ID] = handler;
    OCR1AH = (msecs >> 4);                      // HI(msecs * 16)
    OCR1AL = (msecs << 4);                      // LO(msecs * 16)
    TCNT1 = 0;                                  // clear counter
    TIFR1 &= ~(1 << OCF1A);                     // clear interrupt
    TIMSK1 |= (1 << OCIE1A);                    // enable interrupt
    TCCR1B = TIMER_MODE_CTC | TIMER_DIV1024;    // start timer
}
